Fix layout shift caused by scrollbar on blog pages

--- a/app/assets/stylesheets/blogs.css
+++ b/app/assets/stylesheets/blogs.css
@@ -40,6 +40,7 @@
 
 html {
   font-size: var(--font-size-base);
+  scrollbar-gutter: stable;
 }
 
 /* Body layout - vertical flex container */
